[gd_scene load_steps=9 format=3 uid="uid://drh62h8c3l284"]

[ext_resource type="Texture2D" uid="uid://bo47sadxi8aap" path="res://images/explosif-menu.png" id="1_o7oxn"]
[ext_resource type="Script" uid="uid://nhftfma5itki" path="res://inscription.gd" id="1_p47is"]
[ext_resource type="Texture2D" uid="uid://df684aylq87c4" path="res://images/logo_bomber_code.png" id="2_8wl3a"]
[ext_resource type="Texture2D" uid="uid://crgjxvdj3qk8t" path="res://images/panel_inscription.png" id="3_bl3me"]
[ext_resource type="Texture2D" uid="uid://b6df5odo88sqm" path="res://images/creer.png" id="5_r653a"]
[ext_resource type="Texture2D" uid="uid://bfpyfga1cp3t3" path="res://images/connection.png" id="6_e7df3"]
[ext_resource type="Texture2D" uid="uid://y12acetbg1si" path="res://images/creer_select.png" id="6_eiav8"]
[ext_resource type="Texture2D" uid="uid://040s31jwqple" path="res://images/connexion_select.png" id="7_r653a"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p47is")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -91.0
offset_right = 213.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o7oxn")
expand_mode = 1
stretch_mode = 4

[node name="BomberCode" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -249.0
offset_top = -68.0
offset_right = 251.0
offset_bottom = 252.0
grow_horizontal = 2
texture = ExtResource("2_8wl3a")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.0
offset_top = 188.0
offset_right = 156.0
offset_bottom = 563.0
grow_horizontal = 2
texture = ExtResource("3_bl3me")
stretch_mode = 5

[node name="register_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 570.0
offset_right = 530.0
offset_bottom = 636.0
texture_normal = ExtResource("5_r653a")
texture_hover = ExtResource("6_eiav8")
ignore_texture_size = true
stretch_mode = 5

[node name="back_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 605.0
offset_top = 570.0
offset_right = 723.0
offset_bottom = 636.0
texture_normal = ExtResource("6_e7df3")
texture_hover = ExtResource("7_r653a")
ignore_texture_size = true
stretch_mode = 5

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 250.0
offset_right = 705.0
offset_bottom = 292.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Login"
flat = true

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 426.0
offset_top = 365.0
offset_right = 709.0
offset_bottom = 407.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Password"
flat = true

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 494.0
offset_right = 710.0
offset_bottom = 536.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Confirm Password"
flat = true
